# hpan-backend-template

./: .gitignore  .gitlab-ci.yml  .mypy.ini  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  dev-requirements  docker-compose.yml  pip-requirements  pyproject.toml  requirements.txt
app/: config.yaml  exception.py  queues.py  server.py  transport.py  worker.py
app/config/: __init__.py  config.py  load.py  queues.py  worker_config.py
app/config/configuration/: configuration.py
app/metrics/: metrics.py  prom_handler.py
app/queue_wrapper/: queue_wrapper.py
app/sentry/: sentry.py
app/tasks/: __init__.py  base_task.py  clroot_worker_jobs.py  function_based_tasks.py  polymorphism.py  signal_handlers.py  tasks.py
app/transport/: ratelimit.py  transport.py
app/utils/: celery_signals.py  fluent.py  metrics.py  ratelimit.py  sentry.py  tracing.py  transport.py  vault.py
base_be_worker/: celery_signals.py  exceptions.py  fluent.py  metrics.py  queue_jobs.py  ratelimit.py  script.py  sentry.py  tracing.py  vault.py  worker.py
base_be_worker/queues/: exception.py
base_be_worker/queues/sqs/: __init__.py
client/: producer.py
examples/client/: producer.py  worker_config.py
examples/client/clroot_job/: producer.py  worker_config.py
examples/client/external_queue/: producer.py
examples/client/fe_be_coupled/: producer.py  worker_config.py
examples/client/fe_be_decoupled/: producer.py  worker_config.py
examples/fluentd/: fluent_log_example.py
examples/mongo/: sample_schema.py  sample_task.py
examples/vault/: vault_example.py
fluentd/: Dockerfile
fluentd/conf/: fluent.conf
tests/unit/: test_transport.py
tests/unit/tasks/: test_function_based_tasks.py  (+1 more)
